--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "inputmask": "^5.0.7",
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1"
   },
